--- a/css/reset.less
+++ b/css/reset.less
@@ -79,7 +79,7 @@ sub {
 // -------------------------
 
 img {
-    height: auto;
+    // height: auto;
     border: 0;
     -ms-interpolation-mode: bicubic;
     vertical-align: middle;
