--- a/css/main.less
+++ b/css/main.less
@@ -4,6 +4,7 @@
 @import "css/layout.less";
 @import "css/type.less";
 @import "css/post.less";
+@import "css/status.less";
 @import "css/states.less";
 
 // Fonts
