--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,15 @@ h2 {
   left: 50%;
   width: 10%;
   margin-left: -5%;
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.status-wrap.is-visible {
+  opacity: 1.0;
 }
 .status {
   padding: 5px;
