--- a/css/status.less
+++ b/css/status.less
@@ -4,6 +4,12 @@
     left: 50%;
     width: 10%;
     margin-left: -5%;
+    opacity: 0;
+    .transition(all 0.5s);
+
+    &.is-visible {
+        opacity: 1.0;
+    }
 }
 
 .status {
