rotate ads slots

--- a/css/main.less
+++ b/css/main.less
@@ -6,6 +6,7 @@
 @import "css/post.less";
 @import "css/status.less";
 @import "css/states.less";
+@import "css/ads.less";
 
 // Fonts
 // #font > .add(glyph, normal);
