--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,51 @@ h2 {
 	.is-valid
 	.is-invalid
 */
+.ad-container {
+  position: fixed;
+  width: 960px;
+}
+.ad-group {
+  margin-top: 9999px;
+  visibility: hidden;
+  -webkit-transition: margin-top 0.75s;
+  -moz-transition: margin-top 0.75s;
+  -ms-transition: margin-top 0.75s;
+  -o-transition: margin-top 0.75s;
+  transition: margin-top 0.75s;
+}
+.ad-group.is-visible {
+  margin-top: 0;
+  visibility: visible;
+}
+.ad-group.ad-group-b {
+  margin-top: -9999px;
+}
+.ad {
+  position: relative;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.ad:before {
+  color: #fff;
+  content: attr(id);
+}
+.ad-left,
+.ad-right {
+  position: absolute;
+}
+.ad-skyscraper {
+  width: 160px;
+  height: 600px;
+  background: #999999;
+}
+.ad-skyscraper.ad-left {
+  right: 980px;
+}
+.ad-skyscraper.ad-right {
+  left: 980px;
+}
 @-webkit-keyframes bounce {
   0% {
     -webkit-transform: translatey(0px);
