viewer can render real ads on load

--- a/css/ads.less
+++ b/css/ads.less
@@ -27,10 +27,10 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 
-    &:before {
-        color: #fff;
-        content: attr(id);
-    }
+    // &:before {
+    //     color: #fff;
+    //     content: attr(id);
+    // }
 }
 
 .ad-left,
@@ -41,7 +41,6 @@
 .ad-skyscraper {
     width: 160px;
     height: 600px;
-    background: @gray;
 
     &.ad-left {
         right: 980px;
