lets see how an instant ad rotation looks

--- a/css/ads.less
+++ b/css/ads.less
@@ -6,7 +6,7 @@
 .ad-group {
     margin-top: 9999px;
     visibility: hidden;
-    .transition(margin-top 0.75s);
+    //.transition(margin-top 0.75s);
 
     &.is-visible {
         margin-top: 0;
