subclass ad-container style so that only ad-rotator element is fixed to viewport

--- a/css/ads.less
+++ b/css/ads.less
@@ -1,6 +1,8 @@
 .ad-container {
-    position: fixed;
-    width: 960px;
+    &.ad-rotator {
+        position: fixed;
+        width: 960px;
+    }
 }
 
 .ad-group {
